--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,89 @@
-.App {
-  text-align: center;
+body {
+    background-color: #23252C;
+    font-family: 'Inter', sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ 
+.card-container {
+    max-width: 960px;
+    margin: 50px auto;
+    align-items: center;
+    border-radius: 25px;
+    background: #F5F5F5;
+    width: 415px;
+    height: 868px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.info-pic {
+      width: 100%;
+      height: 317px;
+      background: url('./images/yosemite-me.jpeg');
+      border-top-left-radius: 25px;
+      border-top-right-radius: 25px;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+.info-name{
+      color: #2B283A;
+      text-align: center;
+      font-weight: 700;
+      line-height: 30px;
+      font-weight: bold;
+      font-family: Inter;
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
   }
-  to {
-    transform: rotate(360deg);
+  
+.info-role {
+      color:#F47D27;
+      text-align: center;
+      line-height: 15px;
+
   }
+
+.info-website {
+      color:#4A4E74;
+      text-align: center;
+      font-weight: 400;
+      line-height: 150%;
+
+
+  }
+
+.info-button {
+    justify-content: center;
+    align-items: center;
+    margin: 30px auto;
+    padding: 5px 50px;
+    display: flex;
+}
+
+
+.about-heading {
+    margin: 20px 60px;
+    font-style: normal;
+    font-weight: bold;
+
+
+}
+
+.about-p {
+    margin: 10px 60px;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 150%;
+    color: #4A4E74;
+
+}
+
+.interest-heading {
+    margin: 20px 60px;
+    font-style: normal;
+    font-weight: bold;
+
+}
+
+.interest-p {
+    margin: 10px 60px;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 150%;
+    color: #4A4E74;
 }
